# ConcatSQL

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
concatsql/: Cargo.toml
concatsql/src/: connection.rs  error.rs  lib.rs  parser.rs  row.rs  value.rs  wrapstring.rs
concatsql/src/mysql/: connection.rs  mod.rs
concatsql/src/postgres/: connection.rs  mod.rs
concatsql/src/sqlite/: connection.rs  mod.rs
concatsql/tests/: mysql.rs  postgres.rs  sqlite.rs
concatsql_macro/: Cargo.toml
concatsql_macro/src/: lib.rs
concatsql_macro/tests/: macro.rs
src/: bidimap.rs  connection.rs  constants.rs  error.rs  lib.rs  overwrite.rs  owstring.rs  parser.rs  row.rs  serial.rs  token.rs  value.rs  wrapstring.rs
src/mysql/: connection.rs  mod.rs  parser.rs  row.rs
src/postgres/: connection.rs  mod.rs
src/sqlite/: connection.rs  define.rs  mod.rs  parser.rs  row.rs  token.rs  value.rs
tests/: mysql.rs  postgres.rs  sqlite.rs
