[package]
name = "concatsql"
version = "0.1.0"
authors = ["kmgy <bhnk1270223@gn.iwasaki.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
sqlite = ["sqlite3-sys/linkage"]
mysql = ["mysql-sys"]
postgres = ["postgres-sys"]


[dependencies]
indexmap = "1.6"
unicode-width = "0.1"
lazy_static = "1.4"

[dependencies.sqlite3-sys]
version = "0.12"
default-features = false
optional = true

[dependencies.mysql-sys]
package = "mysql"
version = "20.0"
optional = true

[dependencies.postgres-sys]
package = "postgres"
version = "0.18"
optional = true

[dev-dependencies]
temporary = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
