[package]
name = "concatsql_macro"
version = "0.1.0"
authors = ["kumavale"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
nom = "7"

[dev-dependencies]
concatsql = { version = "0.4", path = "../concatsql" }
