[package]
name = "concatsql_macro"
version = "0.1.1"
authors = ["kumavale"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kumavale/ConcatSQL"
description = "A secure library for SQLite, MySQL and PostgreSQL."
categories = ["database"]
keywords = ["database", "sql", "sqlite", "mysql", "postgres"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
nom = "7"

[dev-dependencies]
concatsql = { version = "0.5", path = "../concatsql" }
